LabDocker-Kubernets/lab/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-web
spec:
  type: NodePort
  selector:
    app: flask-web
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30080
