LabDocker-Kubernets/lab/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-web
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: flask.lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-web
                port:
                  number: 5000
          - path: /info
            pathType: Prefix
            backend:
              service:
                name: flask-web
                port:
                  number: 5000
